(feat): jdk 20 support